--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     min-height: 100vh;
 }
     
-    .container {
+    .main {
         width: 350px;
         height: 600px;
         background-color: hsl(216, 50%, 16%);
